c4prj1_deck/grade.txt
Grading at Sun Aug  9 06:43:58 UTC 2020
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:294:35: error: ‘hands’ undeclared (first use in this function)
       if(hand->cards[i]->value == hands->cards[j]->value) {
                                   ^
eval.c:294:35: note: each undeclared identifier is reported only once for each function it appears in
Compilation of eval.c failed

Overall Grade: F
